# dyno

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  InstrPrinter.h  LICENSE.txt  LowerOps.h  README.md  formatters.py  test_constant_stress.cpp
.github/workflows/: cmake_build_test.yml
docs/: Dyno-SV_Example_Compilation.md  IRDesign.md
include/aig/: AIG.h  AIGContext.h  AIGCut.h  AIGInstrs.inc  AIGPrinter.h  IDs.h  PrintParse.h
include/aig/passes/: AIGBalance.h  AIGSim.h
include/c/: AST.h
include/dsl/: DSLBuilder.h  DSLContext.h  DSLInstrs.inc  DSLParser.h  DSLValue.h  IDs.h  PrintParse.h
include/dyno/: AnalysisCache.h  BlockCompare.h  Builder.h  CFG.h  Constant.h  Context.h  CoreOps.inc  CustomInstr.h  DebugInfo.h  DeepCopy.h  DestroyMap.h  DialectIDs.inc  DialectInfo.h  FatContext.h  FixedFlatObjStore.h  GlobalResolver.h  HierBlockIterator.h  IDImpl.h  IDObjStore.h  IDs.h  Instr.h  InstrMixin.h  InstrPrinter.h  Interface.h  Lexer.h  MutInstr.h  NewDeleteObjStore.h  Obj.h  ObjInfo.h  ObjMap.h  ObjPool.h  ObjStore.h  Opcode.h  Parser.h  Pass.h  RefUnion.h  Symbol.h  Type.h  TypeHint.h
include/dyno/passes/: CoreDialectPasses.h  ResolveImports.h
include/dynomite/: IDs.h  SAT.h
include/hw/: AutoDebugInfo.h  BitRange.h  Concat.h  DebugInfo.h  DeepCopy.h  DefUseMixin.h  FlipFlop.h  HWAbstraction.h  HWConstant.h  HWContext.h  HWInstr.h  HWInstrs.inc  HWOps.inc  HWParser.h  HWPrinter.h  HWTypeIDs.h  HWValue.h  IDs.h  Instance.h  LUT.h  LoadStore.h  Memory.h  MemoryPort.h  Module.h  ObjInfo.h  PassPipeline.h  Pointer.h  PrintParse.h  Process.h  Register.h  SensList.h  SimHeader.h  SimTop.h  StdCellInfo.h  Wire.h
include/hw/analysis/: BitAliasAnalysis.h  BitAlignmentAnalysis.h  CacheInvalidation.h  ControlFlow.h  DelayAnalysis.h  DemandedBits.h  KnownBits.h  LoopbackAnalysis.h  MuxTree.h  PipelineAnalysis.h  RegisterValue.h  SCFTraversal.h  WireVariable.h
include/hw/passes/: ABC.h  AIGConstruct.h  AggressiveDeadCodeElimination.h  CheckPass.h  CommonSubexpressionElimination.h  ConstantMapping.h  DumpPass.h  DumpSimHeader.h  DumpVerilog.h  EarlySharePass.h  EvalInitProcs.h  FindLongestPath.h  (+38 more)
include/ir/: Arch.h  ArchInstrBuilder.h  DominatorTree.h  IR.h  IRBuilder.h  IRPrinter.h  IRVisitor.h  LazySSABuilder.h  MemoryAccess.h  Operand.h  RegAlloc.h  RegLiveness.h  SSADestruction.h  SSAIRBuilder.h
include/meta/: IDs.h  MetaContext.h  MetaParser.h  MetaPassManager.h  PassPipelineInterpreter.h  PrintParse.h
include/op/: Function.h  IDs.h  MapObj.h  OpBuilder.h  OpContext.h  OpInstrs.inc  PrintParse.h  StringObj.h  StructuredControlFlow.h
include/riscv/: Arch.h
include/scf/: Function.h  IDs.h  ObjInfo.h  SCF.h  SCFOps.inc
include/support/: ASAN.h  Algorithm.h  Any.h  ArrayRef.h  Bits.h  CallableRef.h  CmdLineArgs.h  Debug.h  DedupeMap.h  DenseMap.h  DenseMapInfo.h  DenseMultimap.h  DynBitSet.h  ErrorRecovery.h  FlatAddressSpace.h  Format.h  InlineStorage.h  IntrusiveList.h  Lexer.h  MMap.h  MachineInt.h  MacroUtil.h  Object.h  ObjectPool.h  Optional.h  PackedSet.h  PointerVariant.h  PtrBitField.h  RTTI.h  Ranges.h  Result.h  ResultUnwrap.h  SlabAllocator.h  SmallVec.h  StringRef.h  SubCommand.h  TempBind.h  TemplateUtil.h  Tokenizer.h  TreeVec.h  (+5 more)
include/test/: IDs.h  TestInterpreter.h
include/type/: IDs.h  PrintParse.h  TypeContext.h  TypeInfo.h
lib/: CMakeLists.txt
lib/c/: IRGen.cpp
lib/dsl/: DSLParser.cpp
lib/dyno/: GlobalResolver.cpp
lib/hw/: HWPrinter.cpp
lib/hw/passes/: InstCombine.cpp  InstCombine.inc
lib/ir/: DominatorTree.cpp  IR.cpp  IRPrinter.cpp
lib/riscv/: PreISelExpansion.cpp
lib/support/: ErrorRecovery.cpp  TruthTable.cpp
sv/: test.sv  test4.sv  test6.sv  test9.sv  testAIG.sv  testAsyncRst.sv  testCSE.sv  testEnum.sv  testFF.sv  testInit.sv  testMem.sv  testNonDeferReg.sv  testRemakr.sv
tools/: AbstrTest.cpp  BigIntTest.cpp  CMakeLists.txt  DSTest.cpp  ObjTest.cpp  RTTI.cpp  dyno-liberty.cpp
tools/arrpat/: CMakeLists.txt  arrpat.cpp
tools/arrpat/include/: Lexer.h  Token.h
tools/arrpat/test/: test2.arrpat
tools/dyno-dsl/: CMakeLists.txt  dyno-dsl.cpp
tools/dyno-opt/: CMakeLists.txt  dyno-opt.cpp
tools/dyno-opt/dyno-ir/: example_memories.dyno  flow.dyno  sky130_fd_sc_hd.dyno
tools/dyno-sim/: CMakeLists.txt  dyno-sim.cpp
tools/dyno-sim/dyno-ir/: counter.dyno  test.dyno
tools/dyno-sim/include/: FST.h
tools/dyno-sim/include/vpi/: IDs.h  Iterator.h  Range.h  VPIInstrs.inc
tools/dyno-sim/python/: Counter_tb.py  Test_tb.py
tools/dyno-sv/: CMakeLists.txt  dyno-sv.cpp
tools/dyno-sv/dyno-ir/: memory-model-flow.dyno
tools/dyno-sv/include/: Frontend.h  ParseVerilogPass.h
tools/dyno-test/: CMakeLists.txt  dyno-test.cpp
tools/dyno-test/dyno-ir/: test.dyno
tools/dynomite/: CMakeLists.txt  dynomite.cpp
(+47 files in other folders)
